--- a/example-server/src/main/resources/rpc.properties
+++ b/example-server/src/main/resources/rpc.properties
@@ -1,4 +1,6 @@
-rpc.zookeeper.address=1.1.1.1:12181
-rpc.nacos.address=1.1.1.1:18848
+# Registry type config, optional: zk, nacos, default: nacos
+rpc.registry.type=zk
+rpc.zookeeper.address=1.1.1.1:2181
+rpc.nacos.address=1.1.1.1:8848
 rpc.nacos.username=nacos
 rpc.nacos.password=nacos
